vlib/v/checker/tests/main_no_body_err.out
vlib/v/checker/tests/main_no_body_err.vv:1:1: error: function `main` must declare a body
    1 | fn main()
      | ~~~~~~~~~
